--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2172c9d8-0e44-43ba-b410-27f8eca7e834"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
